@@ -444,7 +444,7 @@ namespace OpenBabel
             ifs.getline(buffer, BUFF_SIZE); // reduced mass
             ifs.getline(buffer, BUFF_SIZE);
             tokenize(vs, buffer);
-            for (unsigned int i = 1; i < vs.size(); ++i) {
+            for (unsigned int i = 2; i < vs.size(); ++i) {
               ++numIntens;
               if (numIntens > lowFreqModes)
                 intensities.push_back(atof(vs[i].c_str()));
@@ -464,7 +464,7 @@ namespace OpenBabel
             int modeCount = vs.size() - 3;
             double massNormalization;
             vector<double> x, y, z;
-            while(modeCount > 1) {
+            while(modeCount >= 1) {
               // 1/sqrt(atomic mass)
               atom = mol.GetAtom(atoi(vs[0].c_str()));
               massNormalization = 1 / sqrt( atom->GetAtomicMass() );
@@ -490,10 +490,11 @@ namespace OpenBabel
 
               // OK, now we have x, y, z for all new modes for one atom
               if (displacements.size()) {
-                for (unsigned int i = 0; i < modeCount - 1;  ++i) {
-                  ++numDisp;
-                  if (numDisp > lowFreqModes)
-                    displacements[prevModeCount + i].push_back(vector3(x[i], y[i], z[i]));
+                numDisp = prevModeCount;
+                for (unsigned int i = 0; i < modeCount;  ++i) {
+                  if (i >= modeCount - newModes){
+                    displacements[numDisp++].push_back(vector3(x[i], y[i], z[i]));
+		  }
                 }
               }
 
